<resources>
    <string name="app_name">Iv android academy 2020</string>
    <string name="backLabel">Back</string>
    <string name="default_movie_name">Avengers: End Game</string>
    <string name="movie_default_age_bound">13+</string>
    <string name="default_movie_genre">Action, Adventure, Fantasy</string>
    <string name="default_movie_review_count">125 REVIEWS</string>
    <string name="storyline_header">Storyline</string>
    <string name="star">star</string>
    <string name="default_movie_storyline">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast_header">Cast</string>
    <string name="default_actor_descr">actor</string>
    <string name="default_logo_desc">logo</string>
    <string name="movies_header">Movies list</string>
    <string name="label_offline_mode">Offline-режим. Поиск недоступен.</string>

    <!-- Отображение информации о фильме -->
    <string name="reviews_count_fmt">%d REVIEWS</string>
    <string name="age_limit_fmt">%d+</string>

    <!-- Уведомления -->
    <string name="popular_movies_channel">Самые популярные фильмы</string>
    <string name="popular_movies_channel_desc">Публикация оповещений о самых популярных новых фильмах</string>
    <string name="popular_movies_notification_content">Доступен новый фильм</string>
</resources>