<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/detailsBackground">

    <ImageView
        android:id="@+id/detailsHeaderBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/details_header_background"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <View
        android:id="@+id/detailsHeaderBackgroundGradient"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/detailsHeaderBackground"
        app:layout_constraintBottom_toBottomOf="@id/detailsHeaderBackground"
        app:layout_constraintStart_toStartOf="@id/detailsHeaderBackground"
        app:layout_constraintEnd_toEndOf="@id/detailsHeaderBackground"
        android:background="@drawable/details_header_gradient"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topMenuTopGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/details_top_menu_top_margin"/>
    
    <ImageView
        android:id="@+id/topMenuBackArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintTop_toTopOf="@id/labelBack"
        app:layout_constraintBottom_toBottomOf="@id/labelBack"
        app:layout_constraintEnd_toStartOf="@id/labelBack"
        android:layout_marginEnd="8dp"

        />

    <TextView
        android:id="@+id/labelBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/topMenuTopGuideline"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"

        android:text="@string/backLabel"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:alpha="0.5"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/movieNameGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"/>
    <TextView
        android:id="@+id/ageBoundView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/movieNameView"
        app:layout_constraintBottom_toTopOf="@id/movieNameView"

        android:text="@string/movie_default_age_bound"
        android:textSize="12sp"
        android:textColor="@android:color/white"
        />

    <TextView
        android:id="@+id/movieNameView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/movieNameGuideline"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        android:text="@string/default_movie_name"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        android:lines="2"
        android:maxLines="2"
        />



</androidx.constraintlayout.widget.ConstraintLayout>